<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:id="@+id/linearLayout"
        android:layout_below="@+id/title">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="30dp">


            <!--Blue Button-->
            <Button
                android:id="@+id/led1BTN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/led1"
                android:textSize="18sp"
                android:onClick="onClick"
                android:background="@color/lightblue"
                android:switchMinWidth="65dp"
                android:textColor="#fff"
                />

            <!--Green Button-->
            <Button
                android:id="@+id/led2BTN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/led2"
                android:textSize="18sp"
                android:onClick="onClick"
                android:background="@color/lightblue"
                android:switchMinWidth="65dp"
                android:textColor="#fff"/>

            <!--Red Button-->
            <Button
                android:id="@+id/led3BTN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@color/lightblue"
                android:onClick="onClick"
                android:switchMinWidth="65dp"
                android:text="@string/led3"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginRight="30dp"
            >

            <!--Temp Button-->
            <Button
                android:id="@+id/tempBTN"
                android:layout_width="match_parent"
                android:layout_height="50dp"


                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/temp"
                android:textSize="18sp"
                android:onClick="onClick"
                android:background="@color/lightblue"
                android:switchMinWidth="65dp"
                android:textColor="#fff"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/camBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:layout_below="@+id/linearLayout"
        android:switchMinWidth="65dp"
        android:text="@string/cam"
        android:textColor="#fff"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:onClick="onClick"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camBTN"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="33dp"
        android:max="10"
        android:progress="2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_below="@id/seekBar"/>

    <TextView
        android:id="@+id/messageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekBar"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        />





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/messageTV"
        android:id="@+id/clientLayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Client Id:" />

        <TextView
            android:id="@+id/tvClientId"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/clientLayout"
        android:id="@+id/tvlayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Status:" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical"
            android:text="Disconnected" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/seekBar"
        android:id="@+id/btnlayout">

        <Button
            android:id="@+id/btnConnect"
            android:layout_gravity="left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="Connect" />

        <Button
            android:id="@+id/btnDisconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="right"
            android:text="Disconnect" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnlayout"
        android:id="@+id/sublayout">

        <EditText
            android:id="@+id/txtSubcribe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="Topic name"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/btnSubscribe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Subscribe" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/sublayout"
        android:id="@+id/messagelayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|top"
            android:text="Last message:" />

        <TextView
            android:id="@+id/tvLastMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical|top"
            android:text="N/A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/messagelayout"
        android:id="@+id/topiclayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Topic:" />

        <EditText
            android:id="@+id/txtTopic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_below="@id/topiclayout"
        android:id="@+id/lastmessagelayout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="Message:" />

        <EditText
            android:id="@+id/txtMessage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center_vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Publish"
        android:layout_below="@id/lastmessagelayout"/>




</RelativeLayout>

